# ping-viewer-next

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: action.yml  deploy-preview.yml  previewCleanup.yml
blueos-ping-viewer-next/: Dockerfile
blueos-ping-viewer-next/files/: entrypoint.sh
ping-viewer-next-desktop/: bun.lockb  package.json  vite.config.ts
ping-viewer-next-desktop/src-tauri/: Cargo.toml  tauri.conf.json
ping-viewer-next-desktop/src-tauri/resources/firmwares/: README.txt
ping-viewer-next-desktop/src-tauri/src/: main.rs
ping-viewer-next-desktop2/: package-lock.json  package.json
ping-viewer-next-desktop2/src/: App.vue
ping-viewer-next-desktop2/src-tauri/: Cargo.toml  tauri.conf.json
ping-viewer-next-desktop2/src-tauri/src/: lib.rs  main.rs
ping-viewer-next-frontend/: bun.lockb  package.json  tailwind.config.js  typed-router.d.ts  vite.config.mjs
ping-viewer-next-frontend/src/: App.vue  main.js  schema.json
ping-viewer-next-frontend/src/components/utils/: ColorPickerField.vue  ConnectionManager.vue  DeviceCard.vue  DeviceManager.vue  MavlinkSettings.vue  NotificationButton.vue  NotificationMenu.vue  ServerConnection.vue  VisualSettings.vue
ping-viewer-next-frontend/src/composables/: useDeviceFetching.js  useRecordingSessions.js
ping-viewer-next-frontend/src/plugins/: index.js  vuetify.js
ping-viewer-next-frontend/src/router/: index.js  widget.js
ping-viewer-next-frontend/src/stores/: deviceAgent.ts  notificationStore.js
ping-viewer-next-frontend/src/views/: Main.vue
pr-preview/pr-1/: index.html
pr-preview/pr-1/assets/: default-BXBr6H8g.js  default-DUmobJQW.js  index-B2bDRxDK.js  index-BYmREfYP.css  index-Bzmuah7Y.js  index-CxhFrN5j.css  index-DcU1oB46.js  index-h2ODfoqE.js
pr-preview/pr-3/: index.html
pr-preview/pr-3/assets/: default--ZgrghKM.js  index-BXdyUI0-.js  index-M30S39Mx.js  index.css
src/: lib.rs  main.rs
src/cli/: manager.rs
src/device/: devices.rs  manager.rs  mod.rs
src/device/manager/: device_discovery.rs  discovery_service.rs  firmware_update.rs  mod.rs
src/device/recording/: mod.rs  schemas.rs
src/logger/: manager.rs
src/server/: manager.rs
tests/: README_TESTING.md  conftest.py  requirements.txt  test_custom_binary.py  test_server.py
(+42 files in other folders)
