[package]
name = "ping-viewer-next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.6.0"
actix-web-actors = "4.3.0"
bluerobotics-ping = {version = "0.2.1"}
chrono = "0.4.38"
clap = "4.5.4"
clip = "0.1.1"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
paperclip = { version = "0.8.2" , features = ["actix4", "swagger-ui"] }
regex = "1.10.4"
rust-embed = "8.4.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.37.0"
tokio-serial = "5.4.4"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = { git = "https://github.com/joaoantoniocardoso/tracing", branch = "tracing-appender-0.2.2-with-filename-suffix" }
udp-stream = "0.0.11"
tracing-tracy = "0.11.0"
validator = "0.18.1"
thiserror = "1.0.61"

[build-dependencies]
vergen-gix = { version = "1.0.0-beta.2", default-features = false, features = ["build"] }
